# gta3sc

./: .appveyor.yml  .bumpversion.cfg  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  DESIGN.adoc  Gemfile  README.md  _config.yml  deploy_rsa.enc  legal.md  limits.txt
_data/: menu.yml
_layouts/: default.html
assets/css/: gta3sc-default.css
config/gta3/: constants.xml
config/gtasa/: commandline.txt  commands.xml  constants.xml  eventchoices.xml  taskchoices.xml  taskopcodes.xml
include/gta3sc/: arena-allocator.hpp  command-manager.hpp  command-table.hpp  diagnostics.hpp  model-manager.hpp  model-table.hpp  parser.hpp  preprocessor.hpp  scanner.hpp  sema.hpp  sourceman.hpp
include/gta3sc/adt/: span.hpp
include/gta3sc/codegen/: relocation-table.hpp  storage-table.hpp
include/gta3sc/codegen/trilogy/: codegen.hpp  emitter.hpp
include/gta3sc/config/: models.hpp
include/gta3sc/ir/: instruction-rewriter.hpp  instruction-visitor.hpp  linked-ir.hpp  parser-ir.hpp  sema-ir.hpp  symbol-table.hpp
include/gta3sc/syntax/: parser.hpp  preprocessor.hpp  scanner.hpp  sema.hpp
include/gta3sc/syntax/lowering/: repeat-stmt-rewriter.hpp
include/gta3sc/util/: arena-allocator.hpp  arena-utility.hpp  arena.hpp  bit_cast.hpp  container-view.hpp  ctype.hpp  element-iterator-adaptor.hpp  intrusive-bidirectional-list-node.hpp  intrusive-forward-list-node.hpp  intrusive-list-node.hpp  intrusive-list.hpp  iterator-adaptor.hpp  memory.hpp  name-generator.hpp  random-access-view.hpp  span.hpp  string-vieweable.hpp  string.hpp  visit.hpp
lib/: CMakeLists.txt  charconv.hpp  command-manager.cpp  command-table.cpp  diagnostics.cpp  model-manager.cpp  model-table.cpp  parser.cpp  preprocessor.cpp  scanner.cpp  sema.cpp  sourceman.cpp  symbol-table.cpp
lib/codegen/: relocation-table.cpp  storage-table.cpp
lib/codegen/trilogy/: codegen.cpp  emitter.cpp
lib/config/: models.cpp
lib/ir/: parser-ir.cpp  sema-ir.cpp  symbol-table.cpp
lib/syntax/: charconv.hpp  parser.cpp  preprocessor.cpp  scanner.cpp  sema.cpp
lib/syntax/lowering/: repeat-stmt-rewriter.cpp
lib/util/: arena.cpp  name-generator.cpp
src/: disassembler.cpp  parser_lexer.cpp  program.cpp  script.cpp  system.cpp
src/cpp/: contracts.hpp  filesystem.hpp  icompare.hpp
test/: GTA3ScriptTest.py  lit.cfg
test/codegen/: 0006-require-label-offset.sc  cleo_string_3vc.sc  dump.sc
test/codegen/0006-require-label-offset/: a.sc  b.sc
test/main/: gta3.test  gtavc.test
unittest/: CMakeLists.txt  command-manager-fixture.hpp  compiler-fixture.hpp  parser.cpp  preprocessor.cpp  scanner.cpp  sema.cpp  stringification.hpp
unittest/codegen/: relocation-table.cpp  storage-table.cpp
unittest/codegen/trilogy/: codegen.cpp  emitter.cpp
unittest/syntax/: parser.cpp  preprocessor.cpp  scanner.cpp  sema.cpp  syntax-fixture.hpp
unittest/syntax/lowering/: repeat-stmt-rewriter.cpp
